--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -6,6 +6,6 @@
   </head>
   <<link rel="stylesheet" href="style.css">
   <body>
-
+    <p>Hello World!</p>
   </body>
 </html>
