--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <<link rel="stylesheet" href="style.css">
   <body>
-    <p>Hello World!</p>
+    <p>Hello Friend!</p>
   </body>
 </html>
