Some changes to index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <<link rel="stylesheet" href="style.css">
   <body>
     <p>Hello Friend!</p>
+    <h1>Some changes, u know?)</h1>
   </body>
 </html>
